Fix 403 CORS issues by allowing multiple origins